--- a/css/main.css
+++ b/css/main.css
@@ -71,3 +71,32 @@
  .sectionpic{
      width: 100%;
  }
+
+ /*contact form page */
+
+iframe {
+    width: 50%;
+    margin: 20px auto;
+    display: block;
+}
+
+input {
+    width: 100%;
+    margin-bottom: 20px;
+    padding-top:5px;
+    padding-bottom: 5px;
+
+}
+
+input[type="submit"] {
+    background-color :darkred;
+    border: none;
+    color: #fff;
+    padding:16px 32px;
+    margin: 5px 5px;
+}
+
+form {
+    padding-left: 10%;
+    padding-right: 10%;
+}
