--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
  body {
      margin: 0;
      font-family: 'Nunito', sans-serif;
-     background-image: url("../images/background.jpg");
+     background-image: url("../img/background.jpg");
      background-size: cover;
      background-repeat: no repeat;
      
@@ -31,7 +31,7 @@
      text-align: center;
      padding: 30px;
      background-color: #D90000;
-     background-image: url("../images/newlogo.png");
+     background-image: url("../img/newlogo.png");
      background-repeat: no-repeat;
      background-position: left center;
      
@@ -123,3 +123,118 @@ form {
 .flex-container img {
     width: 90%;
 }
+
+/* Image Slider */
+.images-slider {
+    display: flex;
+    height: 300px;
+    position: relative;
+    z-index: 1;
+    align-items: center;
+    justify-content: center;
+}
+
+#slides {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.slide {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 1;
+    background-size: cover !important;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+}
+
+.showing {
+    opacity: 1;
+    z-index: 2;
+}
+
+.slide:nth-of-type(1) {
+    background: url("../img/cafe_slider1.jpg") no-repeat top;
+}
+.slide:nth-of-type(2) {
+    background: url("../img/cafe_slider2.jpg") no-repeat top;
+}
+.slide:nth-of-type(3) {
+    background: url("../img/cafe_slider3.jpg") no-repeat top;
+}
+
+/* Testimonial */
+.testimonial-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+}
+
+.testimonial {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: whitesmoke;
+    border-top: 10px solid white;
+    border-bottom: 10px solid white;
+    box-shadow: 0 0 5px grey;
+}
+
+.testimonial h3 {
+
+}
+
+.testimonial img {
+    width: 200px;
+    border-radius: 50%;
+    border: 10px solid white;
+    box-shadow: 0 0 5px gray;
+}
+
+blockquote {
+}
+
+blockquote span {
+    font-size: 45px;
+    color: #D90000;
+    font-style: italic;
+}
+
+.arrow-wrapper {
+
+}
+
+.arrow-inner {
+
+}
+
+.arrow-inner img {
+
+}
+
+.flex-end {
+
+}
+
+
+/* Mobile-friendly */
+@media (max-width: 1000px){
+    nav {
+           background-image: url("../img/fork.png")
+       }
+   
+   }
