--- a/css/main.css
+++ b/css/main.css
@@ -21,15 +21,13 @@ font-family: 'Comfortaa', cursive;
      background-image: url("../img/background.jpg");
      background-size: cover;
      background-repeat: no repeat;
-     
  }
  
  #main {
      width: 70%;
      background-color: #fff;
      margin: 0px auto;
-     max-width: 1000px;
-     
+     max-width: 1000px;     
  }
  
  nav {
@@ -38,9 +36,7 @@ font-family: 'Comfortaa', cursive;
      background-color: #D90000;
      background-image: url("../img/newlogo.png");
      background-repeat: no-repeat;
-     background-position: left center;
-     
- 
+     background-position: left center; 
  }
  
  nav a {
@@ -48,8 +44,7 @@ font-family: 'Comfortaa', cursive;
      text-decoration: none;
      font-size: large;
      padding-left: 2%;
-     padding-right: 2%;
-     
+     padding-right: 2%;     
  }
  
  nav a:hover {
@@ -90,7 +85,6 @@ input {
     margin-bottom: 20px;
     padding-top:5px;
     padding-bottom: 5px;
-
 }
 
 input[type="submit"] {
@@ -112,17 +106,14 @@ form {
     width: 80%;
     margin: 30px auto;
     display: flex;
-    flex-wrap: wrap;
-    
+    flex-wrap: wrap;    
 }
 
-.flex-container > div {
-    
+.flex-container > div {    
     flex: 31%;
     margin: 1%;
     justify-content: center;
-    display: flex;
-    
+    display: flex;    
 }
 
 .flex-container img {
@@ -193,7 +184,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: whitesmoke;
+    background: whitesmoke;
     border-top: 10px solid white;
     border-bottom: 10px solid white;
     box-shadow: 0 0 5px grey;
@@ -207,7 +198,7 @@ form {
     width: 200px;
     border-radius: 50%;
     border: 10px solid white;
-    box-shadow: 0 0 5px gray;
+    box-shadow: 0 0 5px grey;
 }
 
 blockquote {
@@ -246,6 +237,116 @@ blockquote h4 {
 .flex-end {
     justify-content: flex-start;
 }
+
+
+/* Gallery  */
+/* The Modal (background) */
+.modal {
+    /* hidden by default, the display property will be changed with JavaScript */
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 400px;
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.mySlides {
+  display: none;
+}
+
+.cursor {
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+img {
+  margin-bottom: -4px;
+}
+
+.active{
+  opacity: 1;
+}
+
+img.hover-shadow {
+  transition: 0.3s;
+}
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/************************* End of Gallery **************************************/
+
 
 /* Mobile-friendly */
 @media (max-width: 1000px){
