Replaced <section>. Added "alt" tags

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ font-family: 'Comfortaa', cursive;
      font-family: 'Nunito', sans-serif;
      background-image: url("../img/background.jpg");
      background-size: cover;
-     background-repeat: no repeat;
+     background-repeat: no-repeat;
  }
  
  #main {
